--- a/index.html
+++ b/index.html
@@ -44,7 +44,35 @@
         
 
     </section>
-    
+    <section id="notes">
+        <div class="header">
+            <h1>Notes don't fail, Structure does.</h1> <br>
+
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        <div class="box">
+            <div class="options">
+            <img src="B13-A01-Knowledge-Vault/assets/Vector.png" alt="">
+            <h2>Scattered notes</h2>
+            <p>Your ideas live in 10 different apps, none of them connected.</p>
+        </div>
+        <div class="options">
+            <img src="B13-A01-Knowledge-Vault/assets/Bookmarks.png" alt="">
+            <h2>Bookmark Overload</h2>
+            <p>Hundreds of saved links you'll never revisit or remember.</p>
+        </div>
+        <div class="options">
+            <img src="B13-A01-Knowledge-Vault/assets/Brain.png" alt="">
+            <h2>No idea connections</h2>
+            <p>Insights stay isolated, never building into bigger understanding.</p>
+        </div>
+        <div class="options">
+            <img src="B13-A01-Knowledge-Vault/assets/Info.png" alt="">
+            <h2>Forgetting what you learned </h2>
+            <p>Knowledge fades because there's no system to retain it.</p>
+        </div>
+        </div>
+    </section>
 
     <footer></footer>
 </body>
