--- a/index.html
+++ b/index.html
@@ -73,6 +73,32 @@
         </div>
         </div>
     </section>
+    <section id="brain">
+        <div class="image">
+            <img src="B13-A01-Knowledge-Vault/assets/knowledge.png" alt="">
+        </div>
+        <div class="solution">
+            <h4> The Solution</h4>
+            <h1>Your Second Brain, Structured By Design.</h1>
+            <p> Personal Knowledge Vault isn't another note-taking app.It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+            <ul >
+                <li>
+                    <img src="B13-A01-Knowledge-Vault/assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one
+                </li>
+                <li>
+                    <img src="B13-A01-Knowledge-Vault/assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write
+                </li>
+                <li>
+                    <img src="B13-A01-Knowledge-Vault/assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts
+                </li>
+                <li>
+                    <img src="B13-A01-Knowledge-Vault/assets/CheckCircle.png" alt=""> Find anything instantly with semantic search
+                </li>
+            </ul>
+ 
+
+        </div>
+    </section>
 
     <footer></footer>
 </body>
