--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
 
         </div>
     </section>
+    <section id="access">
+        <div class="access-header">
+            <h1>Ready to think more clearly?</h1>
+            <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
+        </div>
+        <button class="btn">Get Early Access </button>
+        <p>Free during early access • No credit card needed </p>
+    </section>
 
     <footer></footer>
 </body>
