--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
         <p>Free during early access • No credit card needed </p>
     </section>
 
-    <footer></footer>
+    <footer>
+        <section class="footer-content">
+            <div class="social">
+                <img src="B13-A01-Knowledge-Vault/assets/logo-footer.png" alt="">
+             </div>
+                <div class="icons">
+                    <h5>Social links</h5>
+                    <img src="B13-A01-Knowledge-Vault/icons/facebook.png" alt="">
+                    <img src="B13-A01-Knowledge-Vault/icons/insta.png" alt="">
+                    <img src="B13-A01-Knowledge-Vault/icons/twitter.png" alt="">
+               </div>  
+        </section>
+        <hr>
+        <p><small>&copy;2026 Personal Knowledge Vault. All rights reserved.</small></p>
+    </footer>
 </body>
 </html>
