--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="inter">
@@ -26,7 +27,7 @@
     <section class="banner">
         <div class="banner-content">
             <div class="access">
-            Early Access Now Open
+           <i class="fa-solid fa-bullseye"></i>Early Access Now Open
             </div>
         <h1> Structured thinking,<br><span class="colour">Not just note-taking.</span> </h1>
         <p>
@@ -35,10 +36,10 @@
         </div>
         <div class="option">
             <button class="button1">
-                Start Building Your Vault
+                Start Building Your Vault <i class="fa-solid fa-arrow-right"></i>
             </button>
             <button class="button2">
-                See How It Works
+               <i class="fa-solid fa-play"></i> See How It Works
             </button>
         </div>
         
@@ -104,7 +105,7 @@
             <h1>Ready to think more clearly?</h1>
             <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
         </div>
-        <button class="btn">Get Early Access </button>
+        <button class="btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
         <p>Free during early access • No credit card needed </p>
     </section>
 
